Overflow fix

--- a/source/css/custom.scss
+++ b/source/css/custom.scss
@@ -127,7 +127,7 @@ section {
   padding: 0.75rem;
   box-sizing: border-box;
   border: 0;
-  overflow: hidden;
+  overflow: visible;
   max-width: 100%;
   height: 3.5rem;
   border-radius: 0.5rem;
